--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "odyssey",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nus-teletubbies.github.io/makerthon-odyssey",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
