--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
         run: npm run build
         env:
           PUBLIC_URL: /makerthon-odyssey
+          NODE_OPTIONS: --openssl-legacy-provider
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
