Fix basename extraction and remove duplicate PUBLIC_URL setting

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          PUBLIC_URL: /makerthon-odyssey
           NODE_OPTIONS: --openssl-legacy-provider
+          CI: false
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
